<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/abc_action_bar_subtitle_top_margin_material"
        android:layout_marginBottom="@dimen/abc_action_bar_subtitle_bottom_margin_material"
        android:textSize="@dimen/abc_text_size_title_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="#fff08c35"
        android:clickable="true"
        android:textColor="#000000"
        android:layout_marginBottom="12dp"
        android:width="64dp"
        android:minWidth="200dp"
        android:onClick="btn1OnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:id="@+id/button2"
        android:background="#fff08c35"
        android:textColor="#000000"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:minWidth="200dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:onClick="btn2OnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="#fff08c35"
        android:textColor="#000000"
        android:width="64dp"
        android:minWidth="200dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:onClick="btn3OnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:background="#fff08c35"
        android:layout_alignParentEnd="false"
        android:textColor="#000000"
        android:width="64dp"
        android:minWidth="200dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:onClick="btn4OnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:background="#fff08c35"
        android:textColor="#000000"
        android:minWidth="200dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:onClick="btn5OnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_6"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:background="#ffff1d45"
        android:textColor="#FFFFFF"
        android:nestedScrollingEnabled="false"
        android:minWidth="200dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:onClick="btn6OnClick" />

</RelativeLayout>

